--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    padding: 0;
+    margin: 0;
+
+    
+
+    font-family: 'Nova Square', sans-serif;
+    font-family: 'PT Serif', serif;
+}
+body{
+    overflow-x: hidden;
+}
+
+
+a{
+    cursor: pointer;
+}
